--- a/samples/render-svg/index.html
+++ b/samples/render-svg/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rethink high level api</title>
+    <title>Render svg</title>
     <link rel="stylesheet" href="../../public/styles/sample.css" />
-    <link rel="stylesheet" href="./pattern.css" />
   </head>
   <body>
+    <img src="line-3-svgrepo-com.svg" alt="svg" width="32" height="32" />
     <div class="sample-container">
-      <canvas class="sample" id="sample"></canvas>
+      <canvas class="sample" id="sample" width="128" height="128"></canvas>
     </div>
-    <pre class="pre-log" id="preview-log"></pre>
-    <script type="module" src="./index.ts"></script>
+    <script type="module" src="index.ts"></script>
   </body>
 </html>
