Add new samples

--- a/samples/dpdx-demo/index.html
+++ b/samples/dpdx-demo/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Font, line, colors</title>
+    <title>DPDX Demo</title>
     <link rel="stylesheet" href="../../public/styles/sample.css" />
-    <style>
-      canvas {
-        background-color: rebeccapurple;
-      }
-    </style>
   </head>
   <body>
     <div class="sample-container">
-      <div class="sample" id="sample"></div>
+      <canvas class="sample" id="sample"></canvas>
     </div>
     <script type="module" src="./index.ts"></script>
   </body>
