--- a/output/index.html
+++ b/output/index.html
@@ -9,16 +9,32 @@
   <body>
     <section class="sample-layout">
       <div class="sample">
+        <iframe src="/web-gpu-experiments/samples/animation-demo/index.html"></iframe>
+        <a href="/web-gpu-experiments/samples/animation-demo/index.html" target="_blank" class="explanation"
+          >Animation Demo</a
+        >
+      </div>
+      <div class="sample">
         <iframe src="/web-gpu-experiments/samples/bottom-left-coord-system/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/bottom-left-coord-system/index.html" target="_blank" class="explanation">Coord. system from bottom-left</a>
+        <a href="/web-gpu-experiments/samples/bottom-left-coord-system/index.html" target="_blank" class="explanation"
+          >Coord. system from bottom-left</a
+        >
+      </div>
+      <div class="sample">
+        <iframe src="/web-gpu-experiments/samples/dpdx-demo/index.html"></iframe>
+        <a href="/web-gpu-experiments/samples/dpdx-demo/index.html" target="_blank" class="explanation">DPDX Demo</a>
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/external-data/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/external-data/index.html" target="_blank" class="explanation">Send data points to shader</a>
+        <a href="/web-gpu-experiments/samples/external-data/index.html" target="_blank" class="explanation"
+          >Send data points to shader</a
+        >
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/fixed-size/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/fixed-size/index.html" target="_blank" class="explanation">Fixed size primitive</a>
+        <a href="/web-gpu-experiments/samples/fixed-size/index.html" target="_blank" class="explanation"
+          >Fixed size primitive</a
+        >
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/font/index.html"></iframe>
@@ -26,23 +42,33 @@
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html" target="_blank" class="explanation">Font, background colors</a>
+        <a href="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html" target="_blank" class="explanation"
+          >Font, background colors</a
+        >
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/font-jetbrains-mono/index.html" target="_blank" class="explanation">Font (JetBrainsMono-Regular)</a>
+        <a href="/web-gpu-experiments/samples/font-jetbrains-mono/index.html" target="_blank" class="explanation"
+          >Font (JetBrainsMono-Regular)</a
+        >
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html" target="_blank" class="explanation">Font (JetBrainsMono-Bold)</a>
+        <a href="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html" target="_blank" class="explanation"
+          >Font (JetBrainsMono-Bold)</a
+        >
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html" target="_blank" class="explanation">Font (JetBrainsMono-Thin)</a>
+        <a href="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html" target="_blank" class="explanation"
+          >Font (JetBrainsMono-Thin)</a
+        >
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/lines-and-text/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/lines-and-text/index.html" target="_blank" class="explanation">Font, line, colors</a>
+        <a href="/web-gpu-experiments/samples/lines-and-text/index.html" target="_blank" class="explanation"
+          >Font, line, colors</a
+        >
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/msdf-font/index.html"></iframe>
@@ -50,15 +76,27 @@
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/plain-rectangle/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/plain-rectangle/index.html" target="_blank" class="explanation">Plain render</a>
+        <a href="/web-gpu-experiments/samples/plain-rectangle/index.html" target="_blank" class="explanation"
+          >Plain render</a
+        >
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/render-line-of-certain-thickness/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/render-line-of-certain-thickness/index.html" target="_blank" class="explanation">Render line of certain thickness</a>
+        <a
+          href="/web-gpu-experiments/samples/render-line-of-certain-thickness/index.html"
+          target="_blank"
+          class="explanation"
+          >Render line of certain thickness</a
+        >
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/render-point-of-certain-size/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/render-point-of-certain-size/index.html" target="_blank" class="explanation">Render point of certain size</a>
+        <a
+          href="/web-gpu-experiments/samples/render-point-of-certain-size/index.html"
+          target="_blank"
+          class="explanation"
+          >Render point of certain size</a
+        >
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/render-svg/index.html"></iframe>
@@ -66,13 +104,16 @@
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/rethink-high-level-api/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/rethink-high-level-api/index.html" target="_blank" class="explanation">Rethink high level api</a>
+        <a href="/web-gpu-experiments/samples/rethink-high-level-api/index.html" target="_blank" class="explanation"
+          >Rethink high level api</a
+        >
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/top-left-coord-system/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/top-left-coord-system/index.html" target="_blank" class="explanation">Coord. system from top-left</a>
+        <a href="/web-gpu-experiments/samples/top-left-coord-system/index.html" target="_blank" class="explanation"
+          >Coord. system from top-left</a
+        >
       </div>
     </section>
   </body>
-</html>  
-  
+</html>
