--- a/samples/animation-demo/index.html
+++ b/samples/animation-demo/index.html
@@ -4,18 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Font, line, colors</title>
+    <title>Animation Demo</title>
     <link rel="stylesheet" href="../../public/styles/sample.css" />
-    <style>
-      canvas {
-        background-color: rebeccapurple;
-      }
-    </style>
   </head>
   <body>
-    <div class="sample-container">
-      <div class="sample" id="sample"></div>
-    </div>
+    <canvas class="sample" id="sample"></canvas>
     <script type="module" src="./index.ts"></script>
   </body>
 </html>
